# src/app/core/api/models/ahb-diff-stats.ts
@@ -1,0 +1,25 @@
+/* tslint:disable */
+/* eslint-disable */
+/* Code generated by ng-openapi-gen DO NOT EDIT. */
+
+
+/**
+ * Count of changes by type for a single Pruefidentifikator
+ */
+export interface AhbDiffStats {
+
+  /**
+   * Number of lines added (exist only in new version)
+   */
+  added: number;
+
+  /**
+   * Number of lines deleted (exist only in old version)
+   */
+  deleted: number;
+
+  /**
+   * Number of lines with content changes
+   */
+  modified: number;
+}
